WEB-3003 fix social media gap

--- a/app/components/footer/footer.less
+++ b/app/components/footer/footer.less
@@ -21,7 +21,7 @@
 
   &.social-media {
     display: flex;
-    gap: 20px;
+    gap: 26px;
   }
 
   &.large-format-only {
